--- a/HW8.html
+++ b/HW8.html
@@ -2,11 +2,39 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Basic Bootstrap Template</title>
+	<title>HW8</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-toggle.min">
+	<!-- jquery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<!-- <script src="js/jquery.min.js"></script> -->
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"> -->
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<!-- <script src="js/bootstrap.min.js"></script> -->
+
+	
+
+
+	
+
+	<!-- jquery ui -->
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css"> -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	<!-- <script src="js/jquery-ui.min.js"></script> -->
+	
+	<!-- Bootstrap-toggle -->
+	<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+	<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+	<!-- <link rel="stylesheet" type="text/css" href="css/bootstrap-toggle.min.css"> -->
+	<!-- <script src="js/bootstrap-toggle.min.js"></script> -->
+	
+	<link rel="stylesheet" type="text/css" href="css/HW8.css">
+	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -22,6 +50,7 @@
 						<div class="form-group col-md-6">
 							<input class="form-control" type="text" id="name_symbol" name="name_symbol" placeholder="Apple Inc or AAPL" 
 							required
+							autocomplete="off"
 							oninvalid="this.setCustomValidity('Please fill out this field')" 
 							oninput="this.setCustomValidity('')"
 							pattern="^.*[^\s]+.*$"
@@ -42,61 +71,125 @@
 				</div>
 		</div><!-- well -->
 
+		<hr>
+
 		<div class="well">
-			<div class="carousel slide"><!-- data-ride="carousel" -->
-			  <!-- Indicators -->
-			  <ol class="carousel-indicators">
-			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-			  </ol>
+			<div class="carousel slide" id="result_tab"><!-- data-ride="carousel" -->
+				  <!-- Indicators -->
+				  <!-- <ol class="carousel-indicators">
+				    <li data-target="#result_tab" data-slide-to="0"></li>
+				    <li data-target="#result_tab" data-slide-to="1"></li>
+				  </ol> -->
 
-			  <!-- Wrapper for slides -->
-			  <div class="carousel-inner" role="listbox">
+				  <!-- Wrapper for slides -->
+			  	<div class="carousel-inner" >
 
-			  	<!-- Favorate -->
-			    <div class="item active">
-			        <div class="panel panel-default">
-						<div class="panel-heading">
-					    	<h4 class="panel-title pull-left">Favorite List</h3>
-					    	<input type="checkbox" data-toggle="toggle" class="pull-right">
-					    	<div class="clearfix"></div>
-					  	</div>
-					  	<div class="panel-body">
-					     Panel content
-					  	</div>
-					</div>
-			    </div>
+				  	<!-- Favorate -->
+				    <div class="item">
+				        <div class="panel panel-default">
+							<div class="panel-heading">
+						    	<h3 class="panel-title pull-left">Favorite List</h3>
+						    	<div class="pull-right">
+						    		Automatic Refresh:
+						    		<input type="checkbox" data-toggle="toggle">
+							    	<button type="button" class="btn btn-default">
+							    		<span class="glyphicon glyphicon-refresh">
+							    	</button>
+							    	<a href="#result_tab" class="btn btn-default" data-slide="next">
+							    		<span class="glyphicon glyphicon-chevron-right"></span>
+							    	</a>
+						    	</div>
+						    	<div class="clearfix"></div>
+							</div><!-- heading -->
+						  	<div class="panel-body">
+						     	<table class="table table-striped">
+						     		<tr>
+						     			<th>Symbol</th>
+						     			<th>Company</th>
+						     			<th>Stock Price</th>
+						     			<th>Change (Change Percent)</th>
+						     			<th>Market Cap</th>
+						     			<th></th>
+						     		</tr>
+						   			<tr>
+						   				<td><a href="#">AAPL</a></td>
+						   				<td>Apple Inc</td>
+						   				<td>$ 105.89</td>
+						   				<td>0.09(0.09%)</td>
+						   				<td>587.12 Billion</td>
+						   				<td><button type="button" class="btn default"><span class="glyphicon glyphicon-trash"></span></button></td>
+						   			</tr>
+						   			<tr>
+						   				<td><a href="#">TSLA</a></td>
+						   				<td>Tesla</td>
+						   				<td>$ 232.34</td>
+						   				<td>5.96(2.63%)</td>
+						   				<td>259/05 Billion</td>
+						   				<td><button type="button" class="btn default"><span class="glyphicon glyphicon-trash"></span></button></td>
+						   			</tr>
+						     	</table>
+						  	</div>
+						</div><!-- panel -->
+				    </div><!-- first item -->
 
-			    <!-- Details -->
-			    <div class="item">
-			      	<div class="panel panel-default">
-						<div class="panel-heading">
-					    	<h3 class="panel-title">Stock Details</h3>
-					  	</div>
-					  	<div class="panel-body">
-					     Panel content
-					  	</div>
-					</div>
-			    </div>
-			  </div>
+			    	<!-- Details -->
+				    <div class="item active">
+				      	<div class="panel panel-default">
+							<div class="panel-heading clearfix">
+								<div class="text-center">
+									<a href="#result_tab" class="btn btn-default pull-left" data-slide="prev">
+							    		<span class="glyphicon glyphicon-chevron-left"></span>
+							    	</a>
+							    	<b>Stock Details</b>
+								</div>
+						  	</div><!-- panel heading -->
+						  	<div class="panel-body">
+						     	<ul class="nav nav-pills">
+								  	<li class="active">
+									  	<a href="#exoticpets" data-toggle="tab">
+									  		<span class="glyphicon glyphicon-dashboard"></span>
+									  		Current Stock
+									  	</a>
+								  	</li>
+								  	<li>
+									  	<a href="#grooming" data-toggle="tab">
+									  		<span class="glyphicon glyphicon-stats"></span>
+										  	Historical Charts
+										</a>
+									</li>
+								  	<li>
+									  	<a href="#generalhealth" data-toggle="tab">
+										  	<span class="glyphicon glyphicon-link"></span>
+										  	News Feeds
+										</a>
+									</li>
+								</ul>
 
-			  <!-- Controls -->
-			  <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-			    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			    <span class="sr-only">Previous</span>
-			  </a>
-			  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-			    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			    <span class="sr-only">Next</span>
-			  </a> -->
-			</div>
+								<hr>
+								
+								<div class="tab-content">
+								  	<div class="tab-pane active" id="exoticpets">
+									 	<h3>Exotic Pets</h3>
+									    <p>We offer specialized care for reptiles, rodents, birds, and other exotic pets.</p>
+									 </div>
+
+								  	<div class="tab-pane" id="grooming">
+									    <h3>Grooming</h3>
+									    <p>Our therapeutic grooming treatments help battle fleas, allergic dermatitis, and other challenging skin conditions.</p>
+								  	</div>
+
+								  	<div class="tab-pane" id="generalhealth">
+									    <h3>General Health</h3>
+									    <p>Wellness and senior exams, ultrasound, x-ray, and dental cleanings are just a few of our general health services.</p>
+								  	</div>
+								</div>
+						  	</div><!-- panel-body -->
+						</div><!-- panel -->
+				    </div><!-- second item -->
+			  	</div><!-- carousel-inner -->
+			</div><!-- carousel -->
 		</div><!-- well -->		
 	</div><!-- container -->
-<script src="http://code.jquery.com/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery-ui.min.js"></script>
-<script src="js/bootstrap-toggle.min.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
-<link rel="stylesheet" type="text/css" href="css/HW8.css">
+
 </body>
 </html>
