--- a/HW8.html
+++ b/HW8.html
@@ -123,14 +123,14 @@
 			  	<div class="carousel-inner" >
 
 				  	<!-- Favorate -->
-				    <div class="item">
+				    <div class="item active">
 				        <div class="panel panel-default">
 							<div class="panel-heading clearfix">
 						    	<h3 class="panel-title pull-left">Favorite List</h3>
 						    	<div class="pull-right">
 						    		<span class="hidden_word">Automatic Refresh:</span>
 						    		<input type="checkbox" data-toggle="toggle">
-							    	<button type="button" class="btn btn-default">
+							    	<button onclick="refreshFavorTable()" type="button" class="btn btn-default">
 							    		<span class="glyphicon glyphicon-refresh">
 							    	</button>
 							    	<a href="#result_tab" class="btn btn-default" data-slide="next">
@@ -151,22 +151,6 @@
 							     		</tr>
 						     		</thead>
 						     		<tbody id="favor_list_content">
-						     			<tr>
-							   				<td><a href="#">AAPL</a></td>
-							   				<td>Apple Inc</td>
-							   				<td>$ 105.89</td>
-							   				<td>0.09(0.09%)</td>
-							   				<td>587.12 Billion</td>
-							   				<td><button type="button" class="btn default"><span class="glyphicon glyphicon-trash"></span></button></td>
-							   			</tr>
-							   			<tr>
-							   				<td><a href="#">TSLA</a></td>
-							   				<td>Tesla</td>
-							   				<td>$ 232.34</td>
-							   				<td>5.96(2.63%)</td>
-							   				<td>259/05 Billion</td>
-							   				<td><button type="button" class="btn default"><span class="glyphicon glyphicon-trash"></span></button></td>
-							   			</tr>
 						     		</tbody>
 						     	</table>
 						  	</div>
@@ -174,7 +158,7 @@
 				    </div><!-- first item -->
 
 			    	<!-- Details -->
-				    <div class="item active">
+				    <div class="item">
 				      	<div class="panel panel-default">
 							<div class="panel-heading clearfix">
 								<div class="text-center">
