--- a/HW8.html
+++ b/HW8.html
@@ -107,14 +107,14 @@
 						</div>
 						<div class="form-group col-md-3 col-lg-3">
 							<button class="btn btn-primary" id="quote" type="submit"><span class="glyphicon glyphicon-search"></span> Get Quote</button>
-						 	<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-refresh"></span> Clear</button>
+						 	<button class="btn btn-default" id="clear_btn" type="button"><span class="glyphicon glyphicon-refresh"></span> Clear</button>
 						</div>
 					</form>
 				</div>
 				
 				<div class="row">
-					<div id="non_valid_prompt"class="error col-sm-12 col-md-offset-3 col-md-6"></div>
-					<div class="col-sm-12 col-md-3">
+					<div id="non_valid_prompt"class="error col-sm-12 col-md-offset-4 col-md-5 col-lg-offset-3 col-lg-6"></div>
+					<div class="col-sm-12 col-md-3 col-lg-3">
 						<div>
 							<strong>Powered by:</strong>
 							<a href="http://dev.markitondemand.com/MODApis/">
@@ -139,11 +139,11 @@
 						    	<h3 class="panel-title pull-left">Favorite List</h3>
 						    	<div class="pull-right">
 						    		<span class="hidden_word">Automatic Refresh:</span>
-						    		<input id="toggleRefresh" type="checkbox" data-toggle="toggle">
-							    	<button onclick="refreshFavorTable()" type="button" class="btn btn-default">
+						    		<span data-toggle="tooltip" title="Auto Refresh"><input id="toggleRefresh" type="checkbox" data-toggle="toggle" ></sapn>
+							    	<button onclick="refreshFavorTable()" type="button" class="btn btn-default" data-toggle="tooltip" title="Refresh">
 							    		<span class="glyphicon glyphicon-refresh">
 							    	</button>
-							    	<a href="#result_tab" class="btn btn-default" data-slide="next">
+							    	<a id="slide_btn" href="#result_tab" class="btn btn-default disabled" data-slide="next" data-toggle="tooltip" title="next page">
 							    		<span class="glyphicon glyphicon-chevron-right"></span>
 							    	</a>
 						    	</div>
